light version sketch

--- a/templates/base_homepage.html.twig
+++ b/templates/base_homepage.html.twig
@@ -4,7 +4,7 @@
         {% block navbar %}{% endblock %}
     </nav>
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4 logo-switch">
+        <a href="{{ path('app_index') }}" class="brand-link elevation-4 logo-switch">
             <img src="{{ asset('build/images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
             <img src="{{ asset('build/images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
         </a>
