scss lightversion + sketch presentation

--- a/templates/lightVersion/light_layout.html.twig
+++ b/templates/lightVersion/light_layout.html.twig
@@ -2,10 +2,10 @@
 
 
 {% block main %}
-    <div class="student-view">
+    <div class="light-view">
         <div class="container">
             {% include 'lightVersion/light_menu.html.twig' %}
-            <div class="student-content">
+            <div class="light-content">
                 {% include 'lightVersion/light_presentation.html.twig' %}
                 {% include 'lightVersion/light_prerequisite.html.twig' %}
                 {% include 'lightVersion/light_objectives.html.twig' %}
