--- a/templates/lightVersion/light_prerequisite.html.twig
+++ b/templates/lightVersion/light_prerequisite.html.twig
@@ -1,7 +1,7 @@
 <section id="prerequisites-section" class="pb-5">
     <div>
-        <span class="border-primary border-bottom">
-            {{ 'app.view.student.tabs.prerequisites' | trans }}
+        <span class="title-underlined">
+            {{ 'app.light_version.title_section.prerequisites' | trans }}
         </span>
     </div>
 
