--- a/templates/lightVersion/light_teaching_mode_dist.html.twig
+++ b/templates/lightVersion/light_teaching_mode_dist.html.twig
@@ -7,11 +7,11 @@
 
 
 <div class="mb-4">
-    <div class="student-subtitle">
+    <div class="light-subtitle">
         <img src="{{ asset('build/images/distanciel_picto.png') }}" class="icon-40" alt="">
-        <h5 class="title-underlined">{{ 'app.view.student.presentation.distant' | trans }}</h5>
+        <h5 class="text-primary">{{ 'app.view.student.presentation.distant' | trans }}</h5>
     </div>
-    <ul class="student-list">
+    <ul class="light-list">
         {% if teachingCm is not empty %}
             <li>
                 <i class="fas fa-check text-primary"></i>
