--- a/assets/scss/light_version.scss
+++ b/assets/scss/light_version.scss
@@ -33,6 +33,11 @@
       margin-right: 1rem;
     }
 
+    .light-subtitle {
+      display: flex;
+      margin-bottom: 1rem;
+    }
+
     .title-underlined {
       position: relative;
       display: block;
@@ -120,6 +125,78 @@
           flex-direction: column !important;
           & >li {
             margin-bottom: 0.25rem;
+          }
+        }
+      }
+    }
+
+    ul.light-list {
+      list-style: none;
+      padding-left: 0;
+
+      &.list-dotted {
+        & > li:before {
+          content: "\2022";
+          color: var(--primary);
+          font-weight: bold;
+          display: inline-block;
+          width: 1em;
+        }
+      }
+
+      li {
+        display: flex;
+        margin-bottom: 0.3rem;
+
+        @media (min-width: 992px) {
+          justify-content: flex-start;
+        }
+
+        i {
+          color: var(--primary);
+          margin-right: 0.8rem;
+          margin-top: 0.3rem;
+        }
+      }
+    }
+
+    ul.light-sections {
+      list-style: none;
+      padding-left: 0;
+
+      & > li {
+        margin-bottom: 0.7rem;
+
+        .light-section-header {
+          padding: 0.7rem;
+          display: flex;
+          background-color: lightgray;
+          justify-content: space-between;
+          cursor: pointer;
+
+          .light-section-title {
+            font-weight: 900;
+          }
+
+          .collapse-button {
+            width: 20px;
+            height: 20px;
+            transition: .3s transform ease-in-out;
+          }
+
+
+          &.collapsed > .collapse-button {
+            transform: rotate(-180deg);
+          }
+        }
+
+        .light-section-content {
+          margin-bottom: 0.5rem;
+          padding-top: 0.5rem;
+
+          .light-section-url {
+            padding-bottom: 0.5rem;
+            text-align: right;
           }
         }
       }
