--- a/templates/lightVersion/light_teaching_mode_dist.html.twig
+++ b/templates/lightVersion/light_teaching_mode_dist.html.twig
@@ -7,9 +7,11 @@
 
 
 <div class="mb-4">
-    <div class="light-subtitle">
-        <img src="{{ asset('build/images/distanciel_picto.png') }}" class="icon-40" alt="">
-        <h5 class="text-primary">{{ 'app.view.student.presentation.distant' | trans }}</h5>
+    <div class="d-flex mb-2">
+        <div class="info-rounded-icon">
+            <img src="{{ asset('build/images/distanciel_picto.png') }}">
+        </div>
+        <h4>{{ 'app.view.student.presentation.distant' | trans }}</h4>
     </div>
     <ul class="light-list">
         {% if teachingCm is not empty %}
