--- a/templates/course_info/view/student_equipments.html.twig
+++ b/templates/course_info/view/student_equipments.html.twig
@@ -1,7 +1,7 @@
 <section id="equipment-section" class="pb-5">
     <div class="student-title">
         <div class="student-img-banner"
-             style="background-image: url('{{ asset('build/images/Biblio.png') }}') !important; ">
+             style="background-image: url('{{ asset('build/images/materiel_photo.jpg') }}') !important; ">
         </div>
         <div class="student-text-banner">
             {{ 'app.view.student.tabs.equipments' | trans }}
