--- a/templates/lightVersion/light_layout.html.twig
+++ b/templates/lightVersion/light_layout.html.twig
@@ -2,6 +2,14 @@
 
 
 {% block main %}
+    <div class="bg-dark p-2">
+        <i class="fas fa-chevron-left"></i> Université Côte d'azur
+    </div>
+
+    <div>
+        <img class="w-100" src="{{ asset('build/images/image_banniere.png') }}">
+    </div>
+
     <div class="light-view">
         <div class="container">
             {% include 'lightVersion/light_menu.html.twig' %}
