--- a/templates/lightVersion/light_menu.html.twig
+++ b/templates/lightVersion/light_menu.html.twig
@@ -1,22 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<div class="d-flex">
+    <div>
+        Icon / Formation / Syllabus {{ courseInfo.course.code }}
+    </div>
+    <div class="dropdown ml-auto">
+        <button class="btn" type="button" id="dropdown-languages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Langues<i class="fas fa-caret-down ml-2"></i>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdown-languages">
+            {% for locale in managed_locales %}
+                <a href="{{ path(app.request.get('_route'), app.request.attributes.get('_route_params')|merge({'_locale' : locale})) }}" class="dropdown-item text-muted">
+                    <img class="mr-1 icon-20" src="{{ asset('build/images/' ~ locale ~ '.png') }}">
+                    {{ ('app.locale.' ~ locale)|trans }}
+                </a>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#presentation-section">{{ 'app.view.student.sidebar.presentation' | trans }}</a>
+                <a class="nav-link" href="#presentation-section">{{ 'app.light_version.title_section.presentation' | trans }}</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#prerequisites-section">{{ 'app.view.student.sidebar.prerequisites' | trans }}</a>
+                <a class="nav-link" href="#prerequisites-section">{{ 'app.light_version.title_section.prerequisites' | trans }}</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#objectives-section">{{ 'app.view.student.sidebar.objectives' | trans }}</a>
+                <a class="nav-link" href="#objectives-section">{{ 'app.light_version.title_section.objectives' | trans }}</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#activities-section">{{ 'app.view.student.sidebar.activity' | trans }}</a>
+                <a class="nav-link" href="#activities-section">{{ 'app.light_version.title_section.activities' | trans }}</a>
             </li>
         </ul>
     </div>
