--- a/assets/scss/light_version.scss
+++ b/assets/scss/light_version.scss
@@ -42,22 +42,23 @@
     margin-bottom: 0;
   }
 
+  .icon-20 {
+    width: 20px;
+    height: 20px;
+  }
+
   @media (min-width: 768px) {
     padding-top: 2rem;
   }
 
+  .breadcrumb-menu {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5rem;
+  }
+
   .light-content {
     padding-left: 0;
-
-    .icon-20 {
-      width: 20px;
-      height: 20px;
-    }
-
-    .icon-30 {
-      width: 30px;
-      height: 30px;
-    }
 
     .light-subtitle {
       display: flex;
@@ -206,5 +207,12 @@
       }
     }
 
+  }
+
+  .warning {
+    padding: 0.5rem;
+    margin: 1rem 0;
+    border: 2px solid #6c757d;
+    color: #6c757d;
   }
 }
