--- a/templates/lightVersion/light_presentation.html.twig
+++ b/templates/lightVersion/light_presentation.html.twig
@@ -138,7 +138,7 @@
         <div class="row w-100">
             <div class="d-flex flex-column col-12 col-lg-6 mb-4">
                 <h4>
-                    {{ 'app.view.student.presentation.teachers' | trans }}
+                    {{ 'app.light_version.presentation.teachers' | trans }}
                 </h4>
                 <span>
                     {% for teacher in courseInfo.courseTeachers %}
@@ -146,7 +146,7 @@
                             {% if not loop.first %}
                                 ,
                             {% endif %}
-                            {{ teacher.firstname }} {{ teacher.lastname }} {% if teacher.emailVisibility and teacher.email is not null %}({{ teacher.email }}){% endif %}
+                            {{ teacher.firstname }} {{ teacher.lastname }} {% if teacher.emailVisibility and teacher.email is not null %}(<span class="text-primary">{{ teacher.email }}</span>){% endif %}
                         {% endif %}
                     {% endfor %}
                 </span>
